src/objects/Tax_Rate__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <description>This field can be used if you wish to tie the Tax rates with different legal entities. Particularly helpful when you manage Orders/Invoices for multiple companies each having its own Tax rate.</description>
        <inlineHelpText>This field can be used if you wish to tie the Tax rates with different legal entities. Particularly helpful when you manage Orders/Invoices for multiple companies each having its own Tax rate.</inlineHelpText>
        <label>Legal Entity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <defaultValue>&quot;*&quot;</defaultValue>
        <label>Post Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Specify the importance of this Tax rate by giving it a number value. Lower numbers have higher value.
If two Tax rules have the same priority number, their taxes are added together. Otherwise their taxes are compounded.
For eg, If you have 2 tax rates GST and QST where GST is calculated first and then QST is compounded on top of GST, then GST can have a priority of 0 and QST a priority of 1.</description>
        <inlineHelpText>Specify the importance of this tax rate by giving it a number value. Lower numbers have higher value.
If two tax rules have the same priority number, their taxes are added together. Otherwise their taxes are compounded.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <label>Product Charge Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_VAT__c</fullName>
        <description>Select if this rate is a Tax or a VAT</description>
        <inlineHelpText>Select if this rate is a Tax or a VAT</inlineHelpText>
        <label>Tax / VAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VAT</fullName>
                    <default>true</default>
                    <label>VAT</label>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>VAT / Tax Rate</label>
    <nameField>
        <label>Tax Identifier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VAT / Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>